# crop-disease-detection

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_REPORT_ANALYSIS.md  PROJECT_STATUS_AND_TECHNICAL_AUDIT.md  README.md  SECURITY.md  USER_MANUAL.md  opencode.json  pyproject.toml  pytest.ini  render.yaml  requirements.txt
app/: main.py  model.py
backend/: .env.example  Dockerfile  config.py  main.py  requirements-dev.txt  requirements.txt
configs/: base.yaml
data/: class_mapping.json
docs/: application_integration_audit.md  authentication.md  data_governance.md  deployment.md  future_model_roadmap.md  model_comparison.md  model_performance_report.md  production_model.md  training_pipeline_audit.md  training_results.md
frontend/: .env.example  index.html  package-lock.json  package.json  vercel.json  vite.config.js
models/: model_config.json
notebooks/: 01_eda.ipynb  02_data_preprocessing.ipynb  03_baseline_model.ipynb  04_transfer_learning.ipynb  05_evaluation_gradcam.ipynb  06_error_analysis.ipynb
scripts/: audit_dataset.py  benchmark_candidates.py  benchmark_inference.py  benchmark_prediction_api.py  bootstrap_production_secrets.ps1  capture_frontend_screenshots.mjs  create_supabase_project.ps1  deploy.sh  download_model.py  migrate_sqlite_to_postgres.py  resume_smoke_test.py  run_training.sh  setup_env.sh  verify_clean_clone.py
specs/: .keep
supabase/: config.toml
tests/: test_app.py  test_benchmark_inference.py  test_benchmark_prediction_api.py  test_data_provenance.py  test_dataset.py  (+15 more)
(+99 files in other folders)
